# devn

./: .gitignore  README.md  omnivanity_gameplan V1.0.0.json  omnivanity_gameplan V1.0.1.json  omnivanity_gameplan V1.0.3.json
omnivanity/: Cargo.toml  build-errors.txt  build_err.txt  check-errors.txt  check_log.txt  cuda_wiring_plan.json  error.txt  log.txt  omnivanity_gameplan V1.0.2.json  package-lock.json
omnivanity/crates/omnivanity-chains/: Cargo.toml
omnivanity/crates/omnivanity-chains/src/: algorand.rs  aptos.rs  bch.rs  bitcoin.rs  cardano.rs  cosmos.rs  dash.rs  digibyte.rs  dogecoin.rs  ethereum.rs  filecoin.rs  hedera.rs  icp.rs  iota.rs  kaspa.rs  lib.rs  litecoin.rs  midnight.rs  monero.rs  nano.rs  near.rs  polkadot.rs  ravencoin.rs  solana.rs  stacks.rs  stellar.rs  sui.rs  tezos.rs  ton.rs  traits.rs  tron.rs  xdc.rs  xrp.rs  zcash.rs  zilliqa.rs
omnivanity/crates/omnivanity-cli/: Cargo.toml
omnivanity/crates/omnivanity-cli/src/: main.rs
omnivanity/crates/omnivanity-core/: Cargo.toml
omnivanity/crates/omnivanity-core/src/: lib.rs  search.rs  stats.rs
omnivanity/crates/omnivanity-crypto/: Cargo.toml
omnivanity/crates/omnivanity-crypto/src/: ed25519.rs  encoding.rs  hash.rs  lib.rs  monero.rs  secp256k1.rs
omnivanity/crates/omnivanity-gpu/: Cargo.toml
omnivanity/crates/omnivanity-gpu/src/: cuda.rs  device.rs  evm_engine.rs  lib.rs  opencl_backend.rs  search.rs  wgpu_backend.rs
omnivanity/crates/omnivanity-gpu/src/kernels/: evm.wgsl  evm_kernel.cu  evm_vanity.cu  keccak.ptx  pattern_match.wgsl
omnivanity/crates/omnivanity-pattern/: Cargo.toml
omnivanity/crates/omnivanity-pattern/src/: difficulty.rs  lib.rs  matcher.rs
omnivanity/gui/: index.html  package-lock.json
omnivanity/gui/src/: App.css  App.tsx
omnivanity/gui/src-tauri/: Cargo.toml  tauri.conf.json
omnivanity/gui/src-tauri/src/: lib.rs
omnivanity/gui/src/components/: ActivityLog.tsx  StatsDashboard.tsx
omnivanity/solVanityPlus/solVanityPlus-main/: README.md  manager.py  requirements.txt
