[workspace]
resolver = "2"
members = [
    "crates/omnivanity-core",
    "crates/omnivanity-crypto",
    "crates/omnivanity-chains",
    "crates/omnivanity-pattern",
    "crates/omnivanity-gpu",
    "crates/omnivanity-cli",
    "gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["OmniVanity Team"]
repository = "https://github.com/omnivanity/omnivanity"

[workspace.dependencies]
# Crypto
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"

# Encoding
bs58 = "0.5"
bech32 = "0.11"
hex = "0.4"

# Randomness
rand = "0.8"
rand_core = "0.6"

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async (for stats/cancellation)
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
omnivanity-core = { path = "crates/omnivanity-core" }
omnivanity-crypto = { path = "crates/omnivanity-crypto" }
omnivanity-chains = { path = "crates/omnivanity-chains" }
omnivanity-pattern = { path = "crates/omnivanity-pattern" }
omnivanity-gpu = { path = "crates/omnivanity-gpu" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
