[package]
name = "omnivanity-core"
version.workspace = true
edition.workspace = true

[features]
default = ["gpu"]
gpu = ["omnivanity-gpu"]
opencl = ["gpu", "omnivanity-gpu/opencl-backend"]

[dependencies]
omnivanity-crypto = { workspace = true }
omnivanity-chains = { workspace = true }
omnivanity-pattern = { workspace = true }
omnivanity-gpu = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
num_cpus = "1.16"


