[package]
name = "omnivanity-gpu"
version.workspace = true
edition.workspace = true

[features]
default = ["wgpu-backend"]
wgpu-backend = ["wgpu", "bytemuck"]

[dependencies]
omnivanity-crypto = { workspace = true }
omnivanity-chains = { workspace = true }
omnivanity-pattern = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
hex = "0.4"

# wgpu (cross-platform GPU - Tier 1 default)
wgpu = { version = "23", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
pollster = "0.4"

[build-dependencies]
cc = "1"
