[package]
name = "gui"
version = "0.1.0"
description = "OmniVanity - Multi-chain Vanity Wallet Generator"
authors = ["OmniVanity Team"]
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OmniVanity core
omnivanity-core = { path = "../../crates/omnivanity-core" }
