[package]
name = "gui"
version = "0.1.0"
description = "OmniVanity - Multi-chain Vanity Wallet Generator"
authors = ["OmniVanity Team"]
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

# OmniVanity core with OpenCL Turbo Mode
omnivanity-core = { path = "../../crates/omnivanity-core", features = ["opencl"] }
omnivanity-gpu = { path = "../../crates/omnivanity-gpu", features = ["opencl-backend"] }
chrono = { version = "0.4", features = ["serde"] }

